--- a/src/App.css
+++ b/src/App.css
@@ -3,47 +3,15 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-.welcome-container {
-  min-height: 100vh;
+.welcome_container {
+  height: 100vh;
 }
 
-/* .carousel {
-  min-height: 718px !important;
-  font-family: 'Montserrat', sans-serif;
-}
-
-
-
-.carousel-caption {
-  top: 25%;
-  padding-top: 0
-}
-
-#carousel-caption {
-  font-weight: bold;
-  font-size: 85px;
-}
-
-
-.image {
-  max-width: 100%;
-  height: 499px;
-  
-} */
-
-/* #a:after {
-  content:'';
-  position:absolute;
-  left:0; top:0;
-  width:100%; height:100%;
-  display:inline-block;
-  background: linear-gradient(to bottom, rgba(41, 61, 179, 0.52), rgba(24, 1, 18, 0.73));
-} */
 
 #a{
   position: relative;
   background-image: linear-gradient(to bottom, rgba(41, 61, 179, 0.52), rgba(24, 1, 18, 0.73)), url('./assets/images/carousel1.png');
-  height: 100vh;
+  height: 500px;
   background-position: center;
   background-size: cover;
   padding-top: 12px;
@@ -51,25 +19,25 @@
 }
 
 
-.welcome-page-buttons {
+.welcome_page_buttons {
   margin-right: 51px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
-.login-button {
+.login_button {
   color: #FFFBFB;
   padding: 6px 20px;
   margin-top: 15px;
 }
 
-.login-button:hover {
+.login_button:hover {
   cursor: pointer;
   color: #272040
 }
 
-.signup-button {
+.signup_button {
   background: #272040 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
   border-radius: 10px;
@@ -78,7 +46,7 @@
   color: #FFFBFB
 }
 
-.welcome-page-details {
+.welcome_page_details {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -86,15 +54,15 @@
   margin-top: 126px;
 }
 
-.welcome-page-text {
+.welcome_page_text {
   font-weight: bold;
-  font-size: 85px;
+  font-size: 60px;
   color:#FFFBFB;
   margin-bottom: 91px;
   text-align: center;
 }
 
-.checkout-button {
+.checkout_button {
   padding: 15px 40px;
   cursor: pointer;
   background: #272040 0% 0% no-repeat padding-box;
@@ -105,10 +73,260 @@
   font-weight: lighter;
 }
 
-@media (max-width: 992px) {
-  .welcome-page-text {
+.charts {
+  background-color: #F8F8F8;
+  padding: 31px 30px 30px 35px;
+  display: flex;
+}
+
+.charts_songs_container {
+  width: 58%;
+  margin-right: 30px
+}
+
+.charts_songs_title_p {
+  color: #272040;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.chart_songs_head {
+  display: flex;
+  align-items: center;
+  height: 86px; 
+  background-color: #FEFEFE;
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.chart_songs_head > p {
+  font-size: 15px;
+  font-weight: bold;
+  color: #1A3365;
+  width: 12.5%;
+  margin-bottom: 0;
+}
+
+.chart_songs_head > .more_width {
+  width: 25%
+}
+
+.charts_songs {
+  display: flex;
+  align-items: center;
+  height: 86px; 
+  background-color: #FEFEFE;
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.charts_songs > p {
+  width: 12.5%;
+  margin-bottom: 0;
+  font-size: 12px;
+  color: #8B8B8B;
+}
+
+.charts_songs_images {
+  display: flex; 
+  align-items: center;
+  width: 25%;
+}
+
+.chart_song_number {
+  color: #1A3365;
+  font-size: 15px;
+  font-weight: bold;
+  margin-right: 20px;
+  margin-bottom: 0;
+}
+
+.chart_song_cover {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+.chart_song_play_image {
+  cursor: pointer;
+}
+
+.charts_songs_track {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+}
+
+.charts_songs_track .song {
+  color: #1A3365;
+  width: 100%;
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 0;
+}
+
+.charts_songs_track .artist {
+  color: #8B8B8B;
+  width: 100%;
+  font-size: 10px;
+  margin-top: 5px;
+  margin-bottom: 0;
+}
+
+.charts_albums_container {
+  width: 38%
+}
+
+.charts_albums_albums {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.charts_albums {
+  margin-right: 40px;
+  cursor: pointer;
+}
+
+.chart_albums_image {
+  width: 200px;
+  height: 200px;
+}
+
+.chart_album_title {
+  color: #8B8B8B;
+  font-size: 12px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.chart_album_artist_name {
+  color: #272040;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.charts_like {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+
+#charts_songs_button {
+  text-align: center;
+  width: 100%;
+}
+
+.charts_songs_button {
+  background-color: #272040;
+  border-radius: 5px;
+  padding: 15px 30px;
+  color: white;
+  font-size: 15px;
+  text-align: center;
+}
+
+.advert_container {
+  display: flex;
+  padding: 50px;
+  background-color: #ECE6FF;
+}
+
+.cd_image {
+  margin-right: 20px;
+  height: 280px;
+}
+
+.advert_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.advert_content_head {
+  color: #272040;
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.advert_content_text {
+  color: #000000;
+  font-size: 15px;
+  padding: 0 65px;
+  text-align: center;
+}
+
+
+/******Signup Page ***/
+.signup_image_container {
+  background-image: url('./assets/images/signup.png');
+  background-size: cover;
+  min-height: 100vh;
+  padding: 100px 100px 100px 150px;
+}
+
+.signup_container {
+  background: #FFFFFF;
+  border: 10px solid #707070;
+  border-radius: 50px;
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+
+.signup_text {
+  background-image: url('./assets/images/robot.png');
+  background-size: cover;
+  border-radius: 34px;
+  height: 100%;
+  width: 45%;
+  padding: 200px 100px 30px 30px;
+}
+
+.signup_text > p {
+  font-weight: bold;
+  font-size: 50px;
+  color: #FFFFFF;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.signup {
+  padding: 50px 100px 50px 80px;
+}
+
+.signup_community {
+  font: 25px Ubuntu;
+  font-weight: 600;
+  color: #000000;
+}
+
+.signup_existing {
+  color: #978A8A;
+  font: 18px Ubuntu;
+}
+
+.signup_existing a {
+  color: #FF0000 !important
+}
+
+.underline {
+  border: none;
+  border-bottom: 1px black solid;
+  outline: none;
+}
+
+
+
+
+/*****Welcome Page ***/ 
+@media (max-width: 850px) {
+  .welcome_page_text {
     font-weight: bold;
-    font-size: 45px;
+    font-size: 55px;
     color:#FFFBFB;
     margin-bottom: 41px;
   }
