--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,7 @@
 .charts_songs {
   display: flex;
   align-items: center;
+  position: relative;
   height: 86px; 
   background-color: #FEFEFE;
   padding: 20px;
@@ -278,7 +279,7 @@
   display: flex;
 }
 
-.signup_text {
+.signup_community_image {
   background-image: url('./assets/images/robot.png');
   background-size: cover;
   border-radius: 34px;
@@ -287,7 +288,7 @@
   padding: 200px 100px 30px 30px;
 }
 
-.signup_text > p {
+.signup_community_image > p {
   font-weight: bold;
   font-size: 50px;
   color: #FFFFFF;
@@ -313,13 +314,389 @@
   color: #FF0000 !important
 }
 
-.underline {
+.signup_form {
+  display: flex;
+  flex-direction: column;
+  margin: 30px 0 50px 0;
+}
+
+.signup_text {
   border: none;
   border-bottom: 1px black solid;
   outline: none;
+  color: #000000;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  width: 300px;
 }
 
+.signup_password_container {
+  position: relative;
+  border: none;
+  border-bottom: 1px black solid;
+  outline: none;
+  color: #000000;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  width: 300px;
+}
 
+.signup_password_image {
+  position: absolute;
+  top: 0px; 
+  right: 10px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.signup_text_password {
+  border: none;
+  outline: none;
+  width: 100%;
+}
+
+.signup_label {
+  color: #978A8A;
+  font: 18px Ubuntu;
+}
+
+.signup_button {
+  background: #203051;
+  padding: 10px 20px;
+  color: white;
+  margin-left: 70px;
+}
+
+.iframe_container {
+  width: 100%;
+  height: 90px;
+  position: sticky;
+  bottom: 0;
+}
+
+/*******Login Page *******/
+
+.login_container {
+  background-image: url('./assets/images/signup.png');
+  background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.login {
+  color: #010000;
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.login_section {
+  width: 48%;
+  background-color: white;
+  min-height: 100vh;
+  padding: 30px 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login_details_password {
+  border: none; 
+  outline: none;
+  padding: 20px;
+  width: 100%;
+}
+
+.login_password {
+  width: 100%;
+  box-shadow: 0px 1px 2px #00000029;
+  border: 1px solid #E5E5E5;
+  border-top: none;
+  color: #978A8A;
+  
+  position: relative;
+}
+
+.password_image {
+  position: absolute;
+  top: 17px; 
+  right: 10px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.login_details {
+  color: #978A8A;
+  width: 100%;
+  padding: 20px;
+  box-shadow: 0px 1px 2px #00000029;
+  border: 1px solid #E5E5E5;
+  border-top: none;
+  outline: none;
+}
+
+.login_button {
+  background: #203051;
+  border-radius: 23px;
+  padding: 15px 60px;
+  margin-top: 25px;
+  width: 60%;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.login_create_account {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 35px;
+}
+
+.login_create_account > button {
+  margin-top: 0
+}
+
+.login_create_account > p {
+  margin-bottom: 10px
+}
+
+.login_google {
+  background: rgb(185, 14, 14);
+  border-radius: 23px;
+  padding: 15px 40px;
+  margin-top: 25px;
+  width: 80%;
+  color: #FFFFFF;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.login_or {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 35px;
+  margin-bottom: 10px;
+}
+
+.login_text {
+  margin-bottom: 0;
+  font-size: 20px;
+  color: #978A8A;
+}
+
+.login_underline {
+  width: 40%;
+  height: 1px;
+  background-color: #978A8A;
+}
+
+/*****Explore ***/
+.explorenav_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  width: 100%;
+  padding: 15px 40px;
+  border-top: 1px solid rgb(240, 232, 232);
+  border-bottom: 1px solid rgb(240, 232, 232);
+}
+
+.explorenav_buttons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 40%;
+  padding: 20px 0;
+}
+
+.explorenav_login {
+  padding: 5px 20px;
+  color: rgb(6, 89, 104);
+  background-color: white;
+  border: 2px solid rgb(6, 89, 104);
+  border-radius: 20px;
+  margin-right: 20px;
+}
+
+.explorenav_signup {
+  padding: 5px 20px;
+  color: white;
+  background-color: rgb(6, 89, 104);
+  border: 2px solid rgb(6, 89, 104);
+  border-radius: 20px;
+  margin-right: 20px;
+}
+
+.explorenav_search {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.explorenav_search_input {
+  border: none;
+  outline: none;
+  color: #000000;
+  height: 100%;
+  width: 99%;
+}
+
+.explorenav_cancel_search {
+  color: gainsboro;
+  cursor: pointer;
+}
+
+/*********Explore Page ****/
+.explore_container {
+  padding: 30px 200px 20px 150px
+}
+
+.explore_charts {
+  font-size: 30px;
+  color: black;
+  font-weight: 700;
+  margin-bottom: 50px;
+}
+
+.explore_top {
+  font-size: 20px;
+  color: black;
+  font-weight: 700;
+  margin-bottom: 5px;
+  margin-top: 60px;
+}
+
+.explore_updated {
+  font-size: 15px;
+  color: gray;
+  margin-bottom: 30px;
+}
+
+.explore_tracks {
+  display: flex;
+  height: 250px;
+  width: 500px;
+  cursor: pointer;
+  position: relative;
+}
+
+.explore_tracks:hover {
+  opacity: 0.8
+}
+
+.explore_tracks_image {
+  height: 100%;
+  width: 50%;
+  background-size: cover;
+}
+
+.explore_tracks_text {
+  padding: 20px 30px;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid rgb(240, 232, 232);
+}
+
+.explore_tracks_text_top {
+  font-size: 20px;
+  color: black;
+  font-weight: 600
+}
+
+.explore_tracks_play_button {
+  position: absolute;
+  bottom: 2px;
+  left: 5px;
+  font-size: 35px;
+  color: white;
+}
+.explore_album_play_button {
+  position: absolute;
+  bottom: 4px;
+  left: 5px;
+  font-size: 35px;
+  color: white;
+}
+
+.explore_artists_images_holder {
+  width: 15%;
+  height: 15%;
+  border-radius: 50%;
+  position: relative;
+}
+.explore_albums_images_holder {
+  width: 20%;
+  height: 20%;
+  position: relative;
+}
+
+.favourite_holder {
+  position: absolute;
+  bottom: 20px;
+  right: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  z-index: -1;
+  border-radius: 50%;
+}
+
+.favourite_album_holder {
+  position: absolute;
+  bottom: 7px;
+  left: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  z-index: -1;
+  border-radius: 50%;
+}
+
+.red_favourite {
+  background-color: red;
+}
+
+.white_favourite {
+  background-color: white;
+}
+
+.explore_artists_images {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.explore_albums_images {
+  width: 100%;
+  height: 100%;
+}
+
+.explore_artists_images:hover {
+  opacity: 0.8
+}
+
+.explore_artists {
+  display: flex;
+  margin-top: 30px;
+}
+
+.explore_artist {
+  display: flex;
+  flex-direction: column;
+  margin-right: 35px;
+  align-items: center;
+}
 
 
 /*****Welcome Page ***/ 
