--- a/src/App.css
+++ b/src/App.css
@@ -555,7 +555,7 @@
 
 /*********Explore Page ****/
 .explore_container {
-  padding: 30px 200px 20px 150px
+  padding: 30px 150px 20px 150px
 }
 
 .explore_charts {
@@ -627,15 +627,28 @@
 }
 
 .explore_artists_images_holder {
-  width: 15%;
-  height: 15%;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   position: relative;
 }
 .explore_albums_images_holder {
-  width: 20%;
-  height: 20%;
+  width: 100%;
+  height: 100%;
   position: relative;
+}
+
+.play_holder {
+  position: absolute;
+  bottom: 7px;
+  left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
 
 .favourite_holder {
@@ -648,6 +661,7 @@
   width: 30px;
   height: 30px;
   z-index: -1;
+  opacity: 0;
   border-radius: 50%;
 }
 
@@ -661,6 +675,7 @@
   width: 30px;
   height: 30px;
   z-index: -1;
+  opacity: 0;
   border-radius: 50%;
 }
 
