--- a/src/App.css
+++ b/src/App.css
@@ -733,6 +733,8 @@
   display: flex;
   flex-direction: column;
   margin-right: 35px;
+  width: 200px;
+  height: 200px;
   align-items: center;
 }
 
@@ -901,12 +903,103 @@
   margin-right: 5px;
 }
 
+#unlike_button {
+  background-color: rgb(240, 82, 82);
+}
+#unlike_button:hover {
+  background-color: rgb(156, 21, 21);
+}
+
+.tracks_header {
+  width: 100%;
+  height: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid rgb(240, 232, 232);
+}
+.tracks_header:hover {
+  background-color: rgb(240, 233, 233);
+}
+
+.playlist_tracks_header {
+  font-size: 13px; 
+  color: rgb(199, 184, 184);
+  text-align: left;
+  margin-bottom: 0;
+}
+
+#track_number {
+  width: 12%;
+}
+#track_title {
+  width: 40%;
+}
+.track_artist {
+  width: 20%;
+}
+#track_duration {
+  width: 8%;
+}
+
 /***** Spinner ****/
 .spinner {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 80vh;
+}
+
+.track_liked {
+  color: red;
+  display: block;
+}
+
+.track_not_liked {
+  color: black; 
+  display: block;
+}
+
+.track_like_holder {
+  width: 25px; 
+  height: 25px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.track_like_holder:hover {
+  background-color: white;
+}
+
+.show{
+  display: block;
+}
+.hide {
+  display: none;
+}
+
+.track_number {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: rgb(199, 184, 184);
+  width: 12%;
+  padding-right: 55px;
+}
+
+.play_track_button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: none;
+  cursor: pointer;
 }
 
 
