--- a/src/App.css
+++ b/src/App.css
@@ -649,8 +649,10 @@
   position: relative;
 }
 .explore_albums_images_holder {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+  width: 250px;
+  height: 250px;
   position: relative;
 }
 
@@ -726,6 +728,7 @@
 
 .explore_artists {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 30px;
 }
 
@@ -1000,6 +1003,15 @@
   padding-right: 55px;
 }
 
+.track_number_discograph {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: rgb(199, 184, 184);
+  width: 20%;
+  padding-right: 55px;
+}
+
 .play_track_button {
   display: flex;
   align-items: center;
@@ -1050,6 +1062,14 @@
   margin-bottom: 0;
 }
 
+.track_album_title_discograph {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 35px;
+  width: 78%;
+}
+
 #track_album_number {
   width: 12%;
 }
@@ -1081,6 +1101,126 @@
   width: 350px;
 }
 
+
+/*****Artist Page ***/
+.artist_details {
+  display: flex;
+}
+
+.artist_details > img {
+  border-radius: 50%;
+}
+
+.artist_details_like {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 40px;
+}
+
+.artist_details_like > p {
+  margin-bottom: 20px;
+}
+
+.artist_discography {
+  width: 100%;
+  display: flex;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  border-bottom: 1px solid rgb(233, 224, 224);
+}
+
+.artist_discography_text {
+  margin-right: 30px;
+  color: grey;
+  font-size: 20px;
+  padding-bottom: 15px;
+  margin-bottom: 0;
+}
+
+#artist_border {
+  border-bottom: 2px solid red;
+  color: black;
+}
+
+/*******Artist Discography ***/
+.discography_first {
+  display: flex;
+}
+
+.discography_top_tracks {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+
+.discography_header_text {
+  font-size: 25px;
+  font-weight: bold;
+  color: black;
+}
+
+.discography_playlists {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin-left: 50px;
+}
+
+.discography_mapped_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+  border-radius: 4px;
+  box-shadow: 0 0 6px rgba(25, 25, 34, .16)
+}
+.discography_see_more_tracks {
+  width: 100%;
+  height: 25px;
+  text-align: center;
+  background-color: rgb(224, 213, 213);
+  font-size: 15px;
+  color: rgb(134, 125, 125)
+}
+
+.remove_border_top:first-child {
+  border-top: 0;
+}
+
+.artist_tracklist {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.artist_tracklist_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.artist_tracklist_header > p {
+  font-size: 35px;
+  color: black;
+  font-weight: bold;
+}
+
+.artist_tracklist_header > input {
+  height: 40px;
+}
+
+.discography_playlist {
+  display: flex;
+  align-items: center;
+  margin-bottom: 29px;
+}
+
+.discography_playlist_image {
+  height: 50px;
+  width: 50px;
+  border-radius: 5px;
+}
 
 
 /*****Welcome Page ***/ 
