--- a/src/App.css
+++ b/src/App.css
@@ -651,8 +651,8 @@
 .explore_albums_images_holder {
   /* width: 100%;
   height: 100%; */
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   position: relative;
 }
 
@@ -1220,6 +1220,17 @@
   height: 50px;
   width: 50px;
   border-radius: 5px;
+}
+
+
+#discography_playlist_mapped {
+  margin-bottom: 50px;
+  margin-right: 30px;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
 }
 
 
