--- a/src/App.css
+++ b/src/App.css
@@ -720,6 +720,7 @@
 .explore_albums_images {
   width: 100%;
   height: 100%;
+  border-radius: 5px;
 }
 
 .explore_artists_images:hover {
@@ -1231,6 +1232,51 @@
 .flex {
   display: flex;
   flex-direction: column;
+}
+
+.hover_similar:hover {
+  cursor: pointer;
+}
+
+/******Search Page****/
+.search_headers {
+  padding-left: 50px;
+}
+
+.top_search_result {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 30px;
+  border-bottom: 1px solid rgb(233, 224, 224)
+}
+
+.top_search_image_holder {
+  display: flex;
+  align-items: center;
+}
+
+.top_search_image_text {
+  margin-left: 40px;
+  font-size: 22px;
+  color: black;
+}
+
+.top_search_image {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.search_tracks {
+  margin-top: 20px;
+}
+
+.remove_search_border {
+  border-bottom: 0;
+}
+
+.remove_search_border_top:first-of-type {
+  border-top: 0;
 }
 
 
