--- a/src/App.css
+++ b/src/App.css
@@ -923,7 +923,7 @@
   align-items: center;
   border-top: 1px solid rgb(240, 232, 232);
 }
-.tracks_header:hover {
+.tracks_header_background:hover {
   background-color: rgb(240, 233, 233);
 }
 
