--- a/src/App.css
+++ b/src/App.css
@@ -745,6 +745,7 @@
   width: 200px;
   height: 200px;
   align-items: center;
+  margin-bottom: 35px;
 }
 
 /********Sidebar ***/
@@ -981,6 +982,8 @@
 }
 
 .track_like_holder {
+  position: absolute;
+  left: 40px;
   width: 25px; 
   height: 25px;
   border-radius: 50%;
@@ -1006,6 +1009,7 @@
   justify-content: space-between;
   color: rgb(199, 184, 184);
   width: 12%;
+  position: relative;
   padding-right: 55px;
 }
 
@@ -1330,6 +1334,15 @@
 
 .add_library_icon:hover .tooltiptext {
   visibility: visible;
+}
+
+.turn_red {
+  margin-bottom: 0;
+}
+
+.turn_red:hover {
+  color: rgb(240, 82, 82);
+  margin-bottom: 0;
 }
 
 
