--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 #a{
   position: relative;
-  background-image: linear-gradient(to bottom, rgba(41, 61, 179, 0.52), rgba(24, 1, 18, 0.73)), url('./assets/images/carousel1.png');
+  background-image: linear-gradient(to bottom, rgba(41, 61, 179, 0.52), rgba(24, 1, 18, 0.73)), url('./assets/images/carousel1.jpg');
   height: 500px;
   background-position: center;
   background-size: cover;
@@ -287,7 +287,7 @@
 }
 
 .signup_image_container {
-  background-image: url('./assets/images/signup.png');
+  background-image: url('./assets/images/signup.jpg');
   background-size: cover;
   height: 100vh;
   padding: 40px 100px 40px 100px;
@@ -303,7 +303,7 @@
 }
 
 .signup_community_image {
-  background-image: url('./assets/images/robot.png');
+  background-image: url('./assets/images/robot.jpg');
   background-size: cover;
   border-radius: 34px;
   height: 100%;
@@ -400,7 +400,7 @@
 /*******Login Page *******/
 
 .login_container {
-  background-image: url('./assets/images/signup.png');
+  background-image: url('./assets/images/signup.jpg');
   background-size: cover;
   min-height: 100vh;
   display: flex;
