--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
 
 #a{
   position: relative;
-  background-image: linear-gradient(to bottom, rgba(41, 61, 179, 0.52), rgba(24, 1, 18, 0.73)), url('./assets/images/carousel1.jpg');
+  /* background-image: linear-gradient(to bottom, rgba(41, 61, 179, 0.52), rgba(24, 1, 18, 0.73)), url('./assets/images/carousel1.jpg'); */
+  background-image: linear-gradient(to bottom, rgba(41, 61, 179, 0.52), rgba(24, 1, 18, 0.73)), url('https://res.cloudinary.com/dfjzditzc/image/upload/v1588971250/carousel1_o4lpy0.jpg');
   height: 500px;
   background-position: center;
   background-size: cover;
@@ -287,7 +288,8 @@
 }
 
 .signup_image_container {
-  background-image: url('./assets/images/signup.jpg');
+  /* background-image: url('./assets/images/signup.jpg'); */
+  background-image: url('https://res.cloudinary.com/dfjzditzc/image/upload/v1588971407/signup_eeojpm.jpg');
   background-size: cover;
   height: 100vh;
   padding: 40px 100px 40px 100px;
@@ -303,7 +305,8 @@
 }
 
 .signup_community_image {
-  background-image: url('./assets/images/robot.jpg');
+  /* background-image: url('./assets/images/robot.jpg'); */
+  background-image: url('https://res.cloudinary.com/dfjzditzc/image/upload/v1588971344/robot_arsptc.jpg');
   background-size: cover;
   border-radius: 34px;
   height: 100%;
@@ -400,7 +403,8 @@
 /*******Login Page *******/
 
 .login_container {
-  background-image: url('./assets/images/signup.jpg');
+  /* background-image: url('./assets/images/signup.jpg'); */
+  background-image: url('https://res.cloudinary.com/dfjzditzc/image/upload/v1588971407/signup_eeojpm.jpg');
   background-size: cover;
   min-height: 100vh;
   display: flex;
