--- a/src/App.css
+++ b/src/App.css
@@ -1289,6 +1289,11 @@
   margin-bottom: 20px;
 }
 
+.artist_mobile_discography {
+  overflow-x: auto;
+  width: 100%;
+}
+
 .artist_discography {
   width: 100%;
   display: flex;
@@ -1335,7 +1340,7 @@
 .discography_playlists {
   display: flex;
   flex-direction: column;
-  width: 20%;
+  width: 40%;
   margin-left: 50px;
 }
 
@@ -1396,7 +1401,7 @@
 
 
 #discography_playlist_mapped {
-  margin-bottom: 50px;
+  margin-bottom: 80px;
   margin-right: 30px;
 }
 
@@ -1535,10 +1540,10 @@
   font-size: 14px;
 }
 
-/* .turn_red:hover {
+.turn_red:hover {
   color: rgb(240, 82, 82);
   margin-bottom: 0;
-} */
+}
 
 
 /****Track Page***/
@@ -1795,9 +1800,106 @@
   font-size: 14px;
 }
 
+.explore_artists_name {
+  font-size: 20px;
+}
+
 @media (max-width: 1025px) {
   .explore_container {
     padding: 30px 150px 20px 150px
+  }
+
+  .sidebar_container {
+    position: fixed;
+    background-color: white;
+    width: 250px;
+    transform: translateX(-250px);
+    transition: all 0.5s;
+  }
+
+  .close_sidebar_button {
+    font-size: 40px;
+    color:#303945;
+  }
+
+  .active {
+    transform: translateX(0);
+    z-index: 500
+  }
+
+  .rotate_right {
+    transform: rotate(-45deg);
+    width: 31px;
+  }
+
+  .rotate {
+    transform: rotate(45deg)
+}
+  .nav_child_container_margin {
+    margin-left: 0%;
+  }
+
+  #show_hamburger {
+    display: block;
+    position: relative;
+    z-index: 700;
+  }
+
+  #show_cancel {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+
+  .toggle-btn span {
+    display: block;
+  }
+
+  .toggle_btn span {
+    display: block;
+  }
+
+  .line_1 {
+    width: 31px;
+  }
+  .line_2 {
+    width: 31px;
+  }
+
+  .line-1 {
+    width: 31px;
+  }
+
+  .line-2 {
+      width: 21.57px;
+  }
+
+  .line-3 {
+      width: 13.48px;
+  }
+
+  .rot {
+    transition: all 0.5s
+  }
+
+  .favourite_holder {
+    z-index: 1 !important;
+    opacity: 1 !important;
+  }
+
+  .favourite_album_holder {
+    z-index: 1 !important;
+    opacity: 1 !important;
+  }
+
+  .mobile_artist_album_image {
+    width: 240px;
+    height: 240px;
+  }
+
+  #discography_playlist_mapped {
+    margin-right: 0;
   }
 }
 
@@ -1886,36 +1988,19 @@
 
   .explore_artists {
     flex-wrap: nowrap;
-    height: 270px;
+    /* height: 270px; */
   }
 
   .explorenav_search {
     width: 60%;
   }
 
-  .u {
-    display: none;
-  }
-
-  .play_track_button {
-    /* display: block; */
-    background-color: black;
-    display: flex;
-    justify-content: center;
-  }
-
-  .sidebar_container {
+  /* .sidebar_container {
     position: fixed;
-    /* z-index: 500; */
     background-color: white;
     width: 250px;
     transform: translateX(-250px);
     transition: all 0.5s;
-    /* height: 100vh; */
-    /* overflow-y: auto; */
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* padding: 200px 20px 40px 20px; */
   }
 
   .close_sidebar_button {
@@ -1934,15 +2019,8 @@
   }
 
   .rotate {
-    /* position: absolute;
-    bottom: 0; */
     transform: rotate(45deg)
 }
-
-  /* .nav_child_container {
-    width: 100%;
-    min-height: 100vh;
-  } */
   .nav_child_container_margin {
     margin-left: 0%;
   }
@@ -1990,6 +2068,57 @@
   .rot {
     transition: all 0.5s
   }
+
+  .favourite_holder {
+    z-index: 1 !important;
+    opacity: 1 !important;
+  }
+
+  .favourite_album_holder {
+    z-index: 1 !important;
+    opacity: 1 !important;
+  } */
+
+  .artist_discography {
+    width: 800px;
+  }
+
+  .discography_first {
+    flex-direction: column;
+  }
+
+  .discography_top_tracks {
+    display: flex;
+    width: 100%;
+  }
+
+  .discography_playlists {
+    margin-left: 0;
+    width: 100%; 
+  }
+
+  .discography_playlist {
+    width: 50%;
+  }
+
+  .mobile_discography_playlist_holder {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .tracks_mobile_display {
+    overflow-x: auto;
+    min-width: 100%;
+  }
+
+  .tracks_header {
+    width: 1000px;
+  }
+
+  .mobile_artist_album_image {
+    width: 250px;
+    height: 250px;
+  }
 }
 
 @media (max-width: 500px) {
@@ -2030,10 +2159,6 @@
     display: block;
   }
 
-  /* #hide_dropdown {
-    display: block;
-  } */
-
   .hide_display_name {
     display: none;
   }
@@ -2055,7 +2180,7 @@
     padding-right: 20px;
   }
 
-  .play_holder {
+  .playlist_play_holder {
     position: absolute;
     top: 160px;
     left: 25%;
@@ -2082,13 +2207,17 @@
     width: 100%;
   }
 
-  .tracks_mobile_display {
+  /* .tracks_mobile_display {
     overflow-x: auto;
     min-width: 100%;
-  }
+  } */
 
   .tracks_header {
     width: 800px;
+  }
+
+  #tracks_header {
+    width: 650px;
   }
 
   .playlist_button {
@@ -2102,11 +2231,12 @@
 
   .show_display_name {
     display: block;
-    padding: 0 20px;
+    padding: 5px 20px;
     font-size: 14px;
     margin-bottom: 10px;
     font-weight: 300;
     color: rgb(27, 26, 26);
+    margin-bottom: 0;
   }
 
   .show_display_name > span {
@@ -2124,4 +2254,72 @@
   .explore_container_logged_in {
     padding: 30px 40px 20px 40px
   }
+
+  .artist_details > img {
+    width: 180px;
+    height: 180px;
+  }
+
+  .artist_discography_text {
+    margin-right: 15px;
+    font-size: 15px;
+    padding-bottom: 15px;
+    word-break: keep-all;
+  }
+
+  .artist_discography {
+    width: 480px;
+  }
+
+  .discography_mapped_container {
+    padding: 10px;
+  }
+
+  #mobile_artist_discography {
+    width: 330px;
+  }
+
+  .track_number_discograph {
+    width: 30%;
+  }
+
+  .track_album_title_discograph {
+    width: 68%;
+  }
+
+  .discography_playlists {
+    margin-top: 40px;
+  }
+
+  .discography_playlist {
+    width: 100%;
+  }
+
+  .discography_playlist_image {
+    height: 80px;
+    width: 80px;
+    border-radius: 5px;
+  }
+
+  .mobile_larger_discography_font {
+    font-size: 20px;
+  }
+
+  .artist_tracklist_header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .artist_tracklist_header > p {
+    font-size: 25px;
+  }
+
+  .mobile_artist_album_image {
+    width: 155px;
+    height: 155px;
+  }
+
+  /* #discography_playlist_mapped {
+    margin-right: 0;
+  } */
 }
